chore: major rebranding to OzyBase and identity update
